--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 			<p>PEANUT BUTTER JELLY TIME!!!</p>
 
-			<p align="center"><img src="CodelabLogo.png" width=300 height=200 border="5"></p>
+			<p align="center"><img src="kaas.jpg" width=300 height=200 border="5"></p>
 
 			<font color="red">LOLOOLOLOLOL!</font>
 
